# 3d-octree-compression

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
include/: CompressedModel.h  IModelCompressor.h  IModelLoader.h  Model.h  ModelManager.h  OBJLoader.h  Octree.h  OctreeCompressor.h  OctreeVisualizer.h  VertexData.h
include/glad/: glad.h
src/: glad.c
